разделил методы апи и написал сваггер
