# routes/api/post.php
@@ -1,15 +1,25 @@
 <?php
 
-use App\Http\Controllers\PostController;
+use Application\Interfaces\Controllers\ICommentController;
+use Application\Interfaces\Controllers\ILikeController;
+use Application\Interfaces\Controllers\IPostController;
 use Illuminate\Support\Facades\Route;
 
-Route::controller(PostController::class)->prefix('posts')->group(function () {
+Route::controller(IPostController::class)->prefix('posts')->group(function () {
     Route::get('/', 'index');
     Route::post('/', 'store');
-
     Route::get('/{post}', 'show');
     Route::delete('/{post}', 'destroy');
-
-    Route::post('/{post}/likes', 'like');
-    Route::post('/{post}/comments', 'comment');
 })->middleware('auth:sanctum');
+
+Route::controller(ILikeController::class)->prefix('posts')->group(function () {
+    Route::get('/{post}/likes', 'index');
+    Route::put('/{post}/likes', 'toggle');
+});
+
+Route::controller(ICommentController::class)->prefix('posts')->group(function () {
+    Route::get('/{post}/comments', 'index');
+    Route::post('/{post}/comments', 'store');
+    Route::put('/{post}/comments/{comment}', 'update');
+    Route::delete('/{post}/comments/{comment}', 'destroy');
+});
