# routes/api/user.php
@@ -5,6 +5,6 @@ use Application\Interfaces\Controllers\IUserController;
 
 Route::controller(IUserController::class)->prefix('users')->group(function () {
     Route::get('/me', 'me');
-    Route::put('/profile', 'update');
+    Route::put('/me', 'update');
     Route::get('/{user}/profile', 'profile');
 })->middleware('auth:sanctum');
